syntax = "proto3";

option java_package = "org.example";

service user {
  // Sign in with a username and password.
  rpc SignIn(SignInRequest) returns (SignInResponse);

  // Sign up with a username and password.
  rpc SignUp(SignUpRequest) returns (SignUpResponse);

  // Create a user profile.
  rpc CreateProfile(CreateProfileRequest) returns (CreateProfileResponse);

  // Update a user's profile.
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);

  // See a user's profile.
  rpc SeeProfile(SeeProfileRequest) returns (SeeProfileResponse);

}

message SignInRequest {
  string username = 1;
  string password = 2;
}

message SignInResponse {
  bool success = 1;
  string message = 2;
}

message SignUpRequest {
  string username = 1;
  string password = 2;
}

message SignUpResponse {
  bool success = 1;
  string message = 2;
}

message CreateProfileRequest {
  string username = 1;
  string name = 2;
  int32 age = 3;
  string occupation = 4;
}

message CreateProfileResponse {
  bool success = 1;
  string message = 2;
}

message UpdateProfileRequest {
  string username = 1;
  string name = 2;
  int32 age = 3;
  string occupation = 4;
}

message UpdateProfileResponse {
  bool success = 1;
  string message = 2;
}

message SeeProfileRequest {
  string username = 1;
}

message SeeProfileResponse {
  bool success = 1;
  string message = 2;
  string name = 3;
  int32 age = 4;
  string occupation = 5;
}


